# graph_reduce

./: CONTRIBUTING.md  Cargo.toml  Design.md  LICENSE.md  README.md
src/: item.rs  lib.rs  node.rs
src/matrix/: mod.rs  square_matrix.rs
